...
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EFD" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jBn-ON-NCs">
                    <rect key="frame" x="0.0" y="78" width="428" height="65"/>
                    <accessibility key="accessibilityConfiguration" identifier="welcomeLabelIdentifier"/>
                    <fontDescription key="fontDescription" type="system" weight="black" pointSize="54"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rcD-vY-HKv">
                    <rect key="frame" x="50" y="188" width="314" height="57"/>
...
